implement move and duplicate features for items
